--- a/templates/tonic-pii-detection-service.yaml
+++ b/templates/tonic-pii-detection-service.yaml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: tonic-pii-detection
-  namespace: tonic
   labels:
     app: tonic-pii-detection
 spec:
@@ -11,5 +10,4 @@ spec:
     targetPort: 7687
   selector:
     app: tonic-pii-detection
-status:
-  loadBalancer: {}
+    {{- include "tonic.selectorLabels" . | nindent 4 }}
