--- a/templates/tonic-queue-service.yaml
+++ b/templates/tonic-queue-service.yaml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: tonic-queue
-  namespace: tonic
   labels:
     app: tonic-queue
 spec:
@@ -12,5 +11,5 @@ spec:
     targetPort: 5672
   selector:
     app: tonic-queue
-status:
-  loadBalancer: {}
+    {{- include "tonic.selectorLabels" . | nindent 4 }}
+
