--- a/templates/tonic-web-server-service.yaml
+++ b/templates/tonic-web-server-service.yaml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: tonic-web-server
-  namespace: tonic
   annotations:
     # This annotation is only required if you are creating an internal facing ELB. Remove this annotation to create public facing ELB.
     service.beta.kubernetes.io/aws-load-balancer-internal: "true"
@@ -21,5 +20,4 @@ spec:
   type: LoadBalancer
   selector:
     app: tonic-web-server
-status:
-  loadBalancer: {}
+    {{- include "tonic.selectorLabels" . | nindent 4 }}
