--- a/templates/tonic-worker-service.yaml
+++ b/templates/tonic-worker-service.yaml
@@ -8,7 +8,6 @@ metadata:
   labels:
     io.kompose.service: tonic-worker
   name: tonic-worker
-  namespace: tonic
 spec:
   ports:
   - name: "8080"
@@ -19,5 +18,4 @@ spec:
     targetPort: 443
   selector:
     io.kompose.service: tonic-worker
-status:
-  loadBalancer: {}
+    {{- include "tonic.selectorLabels" . | nindent 4 }}
